--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
     "formik": "^2.2.9",
+    "nanoid": "^3.1.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "shortid": "^2.2.16",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
@@ -42,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/shortid": "^0.0.29"
   }
 }
